--- a/app/views/document_items/_form.html.erb
+++ b/app/views/document_items/_form.html.erb
@@ -1,10 +1,15 @@
 <%= form_with(url:yield(:item_url), local: true,id:"form_id") do |form| %>
  
     <div class="field">
-      <%= form.text_area :content, id: :document_item_content,rows:5,class:"form-control", style:"border-radius:8px;",placeholder:"提出物の保護者への質問を入力ください。" %>
+      <%= form.text_area :content, id: :document_item_content,rows:5,class:"form-control fa", style:"border-radius:8px;",placeholder:"\uf075 提出物の保護者への質問を入力ください。" %>
     </div><br><br>
 
     <div class="actions">
-      <%= form.submit "送信",class:"btn btn-primary btn-lg",style:"width:20%;" %>
+      <%= form.submit "送信",class:"btn btn-primary btn-lg",id:"document_item_new_button" %>
+      <% unless @item_count.nil? %>
+         <% if controller.controller_name == "document_items" && @item_count >=1  %>
+            <%= link_to "終了", documents_path(params:{input: true}),class:"btn btn-default btn-lg",id:"document_item_new_button2" %>
+         <% end %>
+      <% end %>   
    </div> 
 <% end %>
