--- a/app/views/document_items/new2.html.erb
+++ b/app/views/document_items/new2.html.erb
@@ -1,27 +1,52 @@
 <% provide(:item_url,document_item_create2_path(@document))%>
+<ol class="stepBar">STEP
+  <li class="visited"><span>1</span><br>書類の概要作成<label style="color:red">(済み)</label></li>
+  <li class="visited"><span>2</span><br>質問項目作成</li>
+ 
+</ol>
+<br>
+
 <!--モーダル-->
 <div id= "input-second" class= "modal fade" role = "dialog" tabindex = "-1" aria-hidden = "true" ></div>
 <div class="text-center text-primary">
   <ul class="document_ul">
-    <li id="document_img"><%= image_tag('/explain/input3.png',size:"60x60",style:"display:inline") %><li>
-    <li><h1 class="title_font">質問項目のフォーム作成</h1></li>
+    <li id="document_img"><%= image_tag('/explain/input3.png',style:"display:inline") %><li>
+    <li><h1 class="title_font" id="document_new_item_title">質問項目のフォーム作成</h1></li>
   </ul> 
 </div>
-<%= link_to "このページの説明見る",input_second_modal_path,remote:true,style:"font-size:24px;text-decoration:underline;" %>
+<div class="text-center">
+  <%= link_to input_second_modal_path,remote:true,id:"document_new_item_link" do %>
+    <i class="fas fa-question-circle"></i>
+    このページの説明見る
+  <% end %>
+</div>  
 <hr>
-<h2 class="title_font" style="font-size:24px;"><%= "タイトル:#{@document.title}" %><br><br>
 <% if flash[:danger].present? %>
  <div class="alert alert-danger" id="item_flash"><%= flash[:danger] %></div>
 <% end %>
-<%= render 'form', document_item: @document_item %><br>
-<% if @item_count >=1 %>
-  <div style="border-top:1px dotted blue;">
-  <%= link_to "終了", teacher_url(1),class:"btn btn-default btn-lg",style:"margin-right:90%;width:20%;margin-top:10px;" %>
-<% end %>  
+<div id="document_new_item_div">
+  <label id="document_new_item_label"><%= "書類タイトル:#{@document.title}" %></label>
+</div>  
+
+<%= render 'form', document_item: @document_item %>
+
 
 <style>
- 
+  body,.row{background:#FFC7AF;}
   #main_alert{display:none;}
+  #document_new_item_label{
+    background:#FF8C00;
+    border-left:5px solid #4689FF;
+    color:#F3FFD8;
+    padding:10px 20% 10px 10px;
+    margin-bottom:2%;
+    text-align:center;
+  }
+  @media screen and (max-width:767px){
+    #document_new_item_title{
+      margin-top:-8%;
+    }
+  }
 </style>
 <script>
   var flg = 1;
