--- a/app/assets/stylesheets/documents.scss
+++ b/app/assets/stylesheets/documents.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c');
+
 .title_font,.document_label{
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-weight: bold;
@@ -105,29 +105,19 @@
 }
 /*アコーディオン切り替え */
 #document_area_view{
-    background: rgb(206,219,233);
-    background: -moz-linear-gradient(top,  rgba(206,219,233,1) 0%, rgba(58,139,194,1) 21%, rgba(58,139,194,1) 25%, rgba(58,139,194,1) 25%, rgba(75,184,240,1) 73%, rgba(38,85,139,1) 100%);
-    background: -webkit-linear-gradient(top,  rgba(206,219,233,1) 0%,rgba(58,139,194,1) 21%,rgba(58,139,194,1) 25%,rgba(58,139,194,1) 25%,rgba(75,184,240,1) 73%,rgba(38,85,139,1) 100%);
-    background: linear-gradient(to bottom,  rgba(206,219,233,1) 0%,rgba(58,139,194,1) 21%,rgba(58,139,194,1) 25%,rgba(58,139,194,1) 25%,rgba(75,184,240,1) 73%,rgba(38,85,139,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b',GradientType=0 );
-    border: none;
-    border-radius: 8px;
-    color: #fff;
-    outline: 0;
-    padding: 12px;
+    margin-top: -2%;
     &:hover{
         background: rgb(229,230,150);
         background: -moz-linear-gradient(top,  rgba(229,230,150,1) 49%, rgba(209,211,96,1) 50%);
         background: -webkit-linear-gradient(top,  rgba(229,230,150,1) 49%,rgba(209,211,96,1) 50%);
         background: linear-gradient(to bottom,  rgba(229,230,150,1) 49%,rgba(209,211,96,1) 50%);
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', endColorstr='#d1d360',GradientType=0 );
-
     }
-    
 }
 /* スマホ用レイアウト */
 @media screen and (max-width:767px){
   .text-center{
       margin-top:10%;
   }
+  
 }
