--- a/app/views/document_selects/_form.html.erb
+++ b/app/views/document_selects/_form.html.erb
@@ -11,11 +11,17 @@
     </div>
   <% end %>
   <div class="field">
-    <%= form.text_area :content, id: :document_select_content,rows:5,class:"form-control",style:"border-radius:8px;",placeholder:"選択肢を作成します。" %>
+    <%= form.text_area :content, id: :document_select_content,rows:5,class:"form-control fa",style:"border-radius:8px;",placeholder:"\uf022 選択肢を作成します。" %>
   </div><br>
 
   <div class="actions">
-    <%= form.submit "送信",class:"btn btn-primary btn-lg" %>
+    <%= form.submit "送信",class:"btn btn-primary btn-lg",id:"document_select_new_submit" %>
+    <% if @select_count >=2 %>
+     <span>
+      <%= link_to '終了', documents_path(params:{input: true}),class:"btn btn-default btn-lg",id:"document_select_finish_button" %>
+      <%= link_to "新規質問作成",document_question_path(@document_item.document_id),class:"btn btn-primary btn-lg",id:"document_select_new_question_button" %>
+    </span>  
+    <% end %>  
   </div>
 <% end %>
 
